--- a/app/views/exam/combined_report.html.haml
+++ b/app/views/exam/combined_report.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('exams_text')
@@ -40,6 +41,7 @@
         .text-input-bg
           = select :combined_report, :batch_id,                                                                                                                  |
             @batches.map {|b| [b.full_name, b.id]},                                                                                                              |
-            { prompt: t('select_a_batch')},{ onChange: "#{remote_function( url: load_levels_exam_index_path(batch_id: "value"), :with => "'batch_id='+value")}"} |
+            { :prompt => t('select_a_batch')},
+            {:onChange => "onChangeRequest(this, '#{url_for(action: :load_levels, batch_id: 'paramid')}')"}
       #levels
     .extender
