--- a/app/views/exam/_batch_select.html.haml
+++ b/app/views/exam/_batch_select.html.haml
@@ -23,5 +23,6 @@
   .text-input-bg
     = select :ranking_level_report, :batch_id,                                                                                                               |
       @batches.map {|b| [b.full_name, b.id]},                                                                                                                |
-      {prompt: t('select_a_batch') },{ onChange: "#{remote_function( url: select_report_type_exam_index_path(batch: "value"), :with=>"'batch_id='+value")}"} |
+      {:prompt => t('select_a_batch') },
+      {:onChange => "onChangeRequest(this, '#{url_for(action: :select_report_type, batch_id: 'paramid')}')"}
 #report_type_select
