--- a/app/views/exam/generated_report2_pdf.haml
+++ b/app/views/exam/generated_report2_pdf.haml
@@ -47,8 +47,8 @@
               %td.name= student.full_name
               - @exam_groups.each do |exam_group|
                 %td.marks
-                  - exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id})
-                  - exam_score = ExamScore.find_by_student_id(student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil?
+                  - exam = Exam.find_by_subject_id_and_exam_group_id(@subject.id, exam_group.id)
+                  - exam_score = ExamScore.find_by_student_id_and_exam_id(student.id, exam.id) unless exam.nil?
                   - unless exam.nil?
                     - if exam_group.exam_type == 'Marks'
                       = exam_score.nil? ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s
@@ -67,7 +67,7 @@
             = t('class_average')
           - @exam_groups.each do |exam_group|
             - if exam_group.exam_type == 'Marks' or exam_group.exam_type == 'MarksAndGrades'
-              - exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id})
+              - exam = Exam.find_by_subject_id_and_exam_group_id(@subject.id, exam_group.id)
               %td.col-pdf-bold.marks
                 = "%.2f"%exam_group.subject_wise_batch_average_marks(@subject.id) unless exam.nil?
             - else
