--- a/app/views/exam/student_subject_rank.html.haml
+++ b/app/views/exam/student_subject_rank.html.haml
@@ -18,7 +18,7 @@
 - #under the License.
 = javascript_include_tag "sortable"
 #content-header
-  = image_tag("  examination/show_exam.png")
+  = image_tag("examination/show_exam.png")
   %h1= t('exams_text')
   %h3= t('student_ranking_per_subject')
   #app-back-button
@@ -42,9 +42,9 @@
           %th= t('name')
           - ranks = []
           - @exam_groups.each do |exam_group|
-            - rank_exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id})
+            - rank_exam = Exam.find_by_subject_id_and_exam_group_id(@subject.id, exam_group.id)
             - unless rank_exam.nil?
-              - exam_scores = ExamScore.find_all_by_exam_id(rank_exam.id)
+              - exam_scores = ExamScore.where(:exam_id => rank_exam.id)
               - ordered_marks = exam_scores.map{|m| m.marks}.compact.uniq.sort.reverse
               - ranks << [exam_group.id,ordered_marks]
             %th= exam_group.name
@@ -59,8 +59,8 @@
                 - if rank[0]==exam_group.id
                   - mark_list = rank[1]
               %td.col-3
-                - exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id})
-                - exam_score = ExamScore.find_by_student_id(student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil?
+                - exam = Exam.find_by_subject_id_and_exam_group_id(@subject.id, exam_group.id)
+                - exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) unless exam.nil?
                 - unless exam.nil?
                   = exam_score.nil? ? '-' : (exam_score.marks.nil? ? '-' : (mark_list.index(exam_score.marks) + 1))
                 - else
