--- a/app/views/batch_transfers/_list_courses.haml
+++ b/app/views/batch_transfers/_list_courses.haml
@@ -19,5 +19,5 @@
 %ul#category-list
   - @batches.each do |batch|
     %li{:class => "list#{cycle('odd', 'even')}"}
-      .category-name= link_to batch.full_name, :controller => 'batch_transfers', :action => 'show', :id => batch
+      .category-name= link_to batch.full_name, :controller => 'batch_transfers', :action => 'show_batch', :id => batch
       .category-edit= link_to "#{t('graduation')}", :controller => 'batch_transfers', :action => 'graduation', :id => batch
