--- a/app/views/batch_transfers/graduation.html.haml
+++ b/app/views/batch_transfers/graduation.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("show_settings.png")
   %h1= t('batch_transfer')
@@ -33,7 +34,7 @@
   %h4
     = t('garduating_batch')
     \: #{@batch.full_name}
-  = form_for :graduate do |f|
+  = form_for(:graduate, :url => {:id => @batch.id}) do |f|
     = t('graduation_message')
     .label-field-pair
       %label{:for => "subject_id"}
@@ -48,9 +49,8 @@
         .heading-no= t('adm_no')
         .category-name= t('name')
         .sel-list
-          = link_to t('all'), 'javascript: void(0);', onclick: "$('input.right').each(function(checkbox) { checkbox.checked = true; });"
-          ,
-          \#{link_to t('none'), 'javascript:void(0)', onclick: "$('input.right').each(function(checkbox) { checkbox.checked = false; });"}
+          = select_all('category-edit')
+          = select_none('category-edit')
       - @batch.students.each do |student|
         %li{:class => "list#{cycle('odd', 'even')}"}
           .category-delete= student.admission_no
