--- a/app/views/batch_transfers/show_batch.html.haml
+++ b/app/views/batch_transfers/show_batch.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("show_settings.png")
   %h1= t('batch_transfer')
@@ -32,7 +33,7 @@
         = t('transferring_batch')
         \:
       .text-input-bg.themed_text= @batch.full_name
-  = form_for :transfer,@batch, :url => { :controller => 'batch_transfers', :action => 'transfer', :id => @batch.id } do |f|
+  = form_for(@batch, :url => { :controller => 'batch_transfers', :action => 'transfer', :id => @batch.id }) do |f|
     = error_messages_for 'batch', :header_message => nil
     .label-field-pair
       %label{:for => "subject_id"}
@@ -46,9 +47,8 @@
         .heading-no= t('adm_no')
         .category-name= t('name')
         .sel-list
-          = link_to t('all'), 'javascript: void(0);', onclick: "$('input.right').each(function(checkbox) { checkbox.checked = true; });"
-          ,
-          \#{link_to t('none'), 'javascript: void(0);', onclick: "$('input.right').each(function(checkbox) { checkbox.checked = false; });"}
+          = select_all('category-edit')
+          = select_none('category-edit')
       - @batch.students.each do |student|
         %li{:class => "list#{cycle('odd', 'even')}"}
           .category-number= student.admission_no
