--- a/app/views/courses/_batch_groups.html.haml
+++ b/app/views/courses/_batch_groups.html.haml
@@ -25,8 +25,8 @@
         .category-name
           - batch_group.grouped_batches.each do|b|
             .category-name= b.batch.name
-        .category-edit= link_to_remote "#{t('edit_text')}", :url=>{:controller=>"courses",:action=>"edit_batch_group", :id=>batch_group.id}  if permitted_to? :edit_batch_group, :courses
+        .category-edit= link_to "#{t('edit_text')}", {:controller=>"courses",:action=>"edit_batch_group", :id=>batch_group.id} , :remote => true if permitted_to? :edit_batch_group, :courses
         .category-delete
-          = link_to_remote "Delete", :url=>{:controller=>"courses",:action=>"delete_batch_group", :id=>batch_group.id}, :confirm=>"Are you sure?" if permitted_to? :delete_batch_group, :courses
+          = link_to "Delete", {:controller=>"courses",:action=>"delete_batch_group", :id=>batch_group.id}, :confirm=>"Are you sure?" , :remote => true if permitted_to? :delete_batch_group, :courses
   - else
     %p.flash-msg No Grouped Batches found.
