--- a/app/views/courses/_update_batch.html.haml
+++ b/app/views/courses/_update_batch.html.haml
@@ -20,4 +20,4 @@
 %ul#category-list
   - @batch.each do |batch|
     %li{:class => "list#{cycle('odd', 'even')}"}
-      .category-name= link_to batch.full_name, [batch.course, batch]
+      .category-name= link_to batch.full_name, {:controller => :batches, :action => :show, :course_id => batch.course, :id => batch}
