--- a/app/views/courses/edit.html.haml
+++ b/app/views/courses/edit.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("courses/edit.css")
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('courses_text')
@@ -31,7 +32,7 @@
       = link_to "#{t('courses_text')}", courses_path
       »
       \#{t('edit_text')}
-    = form_for setup_course(@course) do |f|
+    = form_for (@course) do |f|
       = error_messages_for :course
       .label-field-pair
         .label-container= f.label "#{t('course_name')}"
