--- a/app/views/courses/grouped_batches.html.haml
+++ b/app/views/courses/grouped_batches.html.haml
@@ -16,6 +16,9 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= csrf_meta_tag
+= stylesheet_link_tag("courses/grouped_batches.css")
 #content-header
   = image_tag("show_settings.png")
   %h1= t('courses_text')
@@ -33,6 +36,7 @@
   #flash
   #errors
     = error_messages_for 'batch_group'
+    = @batch_group_errors if !@batch_group_errors.blank?
   #class_form
     = form_for :batch_group, url: {action: :create_batch_group, course_id: @course.id}, remote: true do |c|
       #form-content
@@ -45,8 +49,8 @@
           .fee_category_scroll
             .sel-list
               = t('select')
-              \: #{link_to t('all'), 'javascript :void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });"},
-              \#{link_to t('none'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });"}
+              = select_all('each_batch')
+              = select_none('each_batch')
             - @batches.each do |b|
               .each_batch
                 = check_box_tag "batch_ids[]", b.id, false, class: :batches_box
