--- a/app/views/courses/manage_course.html.haml
+++ b/app/views/courses/manage_course.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("courses/manage_course.css")
 #content-header
   = image_tag("show_settings.png")
   %h1= t('courses_text')
@@ -46,5 +47,5 @@
           .category-name= link_to course.full_name, course_path(course)
           .category-edit= link_to "#{t('edit_text')}", edit_course_path(course) if permitted_to? :edit, :courses
           .category-delete
-            = link_to(t('delete_text'), course_path(course), :method => 'delete', :confirm => "#{t('delete_confirm_msg')}") if permitted_to? :destroy, :courses
+            = link_to t('delete_text'), {action: :delete, :id => course}, data: {confirm: "#{t('delete_confirm_msg')}", method: :delete} if permitted_to? :destroy, :courses
     .extender
